- fixes for https://github.com/owncast/owncast/issues/972 Add optional prop to text field to trim() whitespaces from field. Apply logic to mostly url fields.
- move textfield blur if invalid turn red to globaal

--- a/styles/form-textfields.scss
+++ b/styles/form-textfields.scss
@@ -67,15 +67,6 @@ Base styles for
     margin: .5em .5em;
   }
 
-  input {
-    &:not(:focus) {
-      &:invalid  {
-        color: var(--ant-error);
-      }  
-    }
-  }
-
-
   @media (max-width: 800px) {
     flex-wrap: wrap;
     .label-side {
