--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,7 @@ a {
 
 p,
 p.description,
+.description,
 .ant-typography {
   font-weight: 300;
   margin: 1em 0;
@@ -108,5 +109,14 @@ strong {
 
   .ant-typography-copy {
     font-size: 0.92em;
+  }
+}
+
+
+input {
+  &:not(:focus) {
+    &:invalid  {
+      color: var(--ant-error);
+    }  
   }
 }
